--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^5.0.0",
+    "react-dom": "^18.2.0"
   }
 }
